# thesis

./: .flake8  .gitignore  2_train_rnn.py  3_evaluate_rnn.py  App.py  README.md  a.py  dataloader.py  evaluate_pipeline.py  extract_feature.py  extract_pose_features.py  extract_pose_hand_data.py  feature_mvit.py  feature_resnet.py  generate_rnn_data.py  model_fixed.py  preprocess_raw_data.py  pyproject.toml  requirements.txt  rnn_postprocessor.py  train_base_model.py  train_feature.py  train_fixed.py  train_rnn.py
configs/: config.yaml
scripts/: evaluate_pipeline.py  extract_pose_features.py  generate_rnn_data.py  genereate_rnn_data.py  preprocess_raw_data.py  train_base_model.py  train_rnn  train_rnn.py
src/: dataloader.py  evaluation.py  losses.py
src/models/: TCN_concat.py  TCN_sum.py  base_detector.py  concat.py  rnn_postprocessor.py  sum.py
src/models/feature_extractor/: mvit_16.py  mvit_32.py
src/utils/: debugging.py  feature_extraction.py  helpers.py  metrics.py  postprocessing.py  visualization.py
